fix image bug on small screens

--- a/wp-content/themes/toolbox v2/style.scss
+++ b/wp-content/themes/toolbox v2/style.scss
@@ -1297,7 +1297,8 @@ body {
 				width: 40.5%;
 			}
 			@media (max-width: 20em) {
-				width: 100%;
+				max-width: 100%;
+				width: auto;
 			}
 		}
 		a {
